added chronicles options and filter css and update chronicle logic

--- a/frontend/public/about/about.html
+++ b/frontend/public/about/about.html
@@ -1,3 +1,8 @@
+<!--
+Attribution to freepik for background image: https://www.freepik.com/free-ai-image/beautiful-anime-sakura-landscape-cartoon-scene_94944923.htm#from_view=detail_alsolike
+Attribution to https://github.com/jhammann/sakura for sakura petals
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -33,10 +38,15 @@
             <p>Keep track of your shows, and novels in one place. <br><br>
                MyChronicles has an extension that automatically 
                tracks all online shows and films for you so that you don't have to lift a finger.
-               Enjoy!
+               Enjoy!  <br><br>
             </p>
         </div>
     </span>
+    <div class="attribution">
+        <p>Attribution to freepik for background image: https://www.freepik.com/free-ai-image/beautiful-anime-sakura-landscape-cartoon-scene_94944923.htm#from_view=detail_alsolike</p>
+        <p>Attribution to https://github.com/jhammann/sakura for sakura petals</p>
+    </p>
+    </div>
 
 </body>
 </html>
